# url-shortener-with-a-twist

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.sqlx/: query-19078d6d96b611ff89741048f13355a2bc7e2614b492f621255f8b8fda85827a.json  query-1d501546b16b7521a7797dce593594f3902f7b8e85723ff5f967d3c968d77b1d.json  query-2c5aa5d457bf2b56209eb1d3ffd371d07cb59de7f9776890023c5b42923d34ab.json  query-38ea3a954ce1217c70dc17e99e85ff4cfa56f28fa9d3d12886a57d8ce80f2c1c.json  query-7ab4086686cab12c0b30cb8d8ebfc328af51ca00ca2da89ae1b9d773776be84c.json  query-84bed541ef70b904bb5d1c1ec8f033fae4281a993eada79ab5560a1d298a8a32.json  query-88ec1eb6d6e1b415394fcbcd8a480eb1455d83069fc8800e35a626b1ca6f6458.json  query-911351f09193d64fc294e70510a164668798fde166efd472d90995dcb72af1e5.json  query-9fd4cafd2ba5d8a4b1fb4765e924d65a16e749d8396d52644bea40219652bca8.json  query-ca5786a40dfa8c7d9d810fef7c67a342b5d2342e5f4e83b77701d261eb82cadc.json  query-cb7fde89fb6e10469d9fabe69b64b8857cb47aac90638e6f43c68af6a29eff43.json  query-cd115b4fc9fc286063ed732977d8a50bf0a3bfbb092af7756a9bcc36dfec4cfa.json  query-d5835078860e81b3cfadea2c7aebe62e4b2e44b51a7eb065e3e66880a10b2e8d.json  query-d8dee8bbaeebf382563bcb34004910a744d7d97c24fb84929452ad5efc7a69d5.json  query-f808f564a6082e70a98ea1c4a85eb78d6308a26f4592a1e5318c84f9aa544826.json  query-fa073ef9639cddd683d77b9e74868479f1f650dc23f6bbd3dff6cd966bacdce8.json
configuration/: base.yaml  local.yaml
migrations/: 20250330192003_create_link_recepients_table.sql  20250330192216_create_links_table.sql  (+1 more)
scripts/: init_db.sh
src/: main.rs  (+3 more)
(+23 files in other folders)
