[package]
name = "url-shortener-with-a-twist"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.97"
serde = "1.0.219"
thiserror = "2.0.12"
config = "0.15.11"
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", default-features = false, features = [
    "clock",
    "serde",
] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
rand = { version = "0.9.0", features = ["std_rng"] }
validator = "0.20.0"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
serde-aux = "4.6.0"
unicode-segmentation = "1.12.0"
secrecy = { version = "0.10.3", features = ["serde"] }
base64 = "0.22.1"
rinja_axum = "0.3.5"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "4.2.0"
wiremock = "0.6.3"
serde_json = "1.0.140"
linkify = "0.10.0"
claims = "0.8.0"
